--- a/qrgui/dialogs/chooseTypeDialog.ui
+++ b/qrgui/dialogs/chooseTypeDialog.ui
@@ -28,6 +28,9 @@
       <property name="text">
        <string>Сущность</string>
       </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
     <item>
