--- a/qrgui/mainwindow/shapeEdit/visibilityConditionsDialog.ui
+++ b/qrgui/mainwindow/shapeEdit/visibilityConditionsDialog.ui
@@ -39,33 +39,35 @@
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="valueComboBox">
+  <widget class="VisibilityValueWidget" name="valueWidget" native="true">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>200</x>
      <y>30</y>
-     <width>181</width>
+     <width>171</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="equalLabel">
+  <widget class="QComboBox" name="operatorComboBox">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>160</x>
      <y>30</y>
-     <width>16</width>
-     <height>16</height>
+     <width>41</width>
+     <height>21</height>
     </rect>
-   </property>
-   <property name="text">
-    <string>=</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>VisibilityValueWidget</class>
+   <extends>QWidget</extends>
+   <header>../mainwindow/shapeEdit/visibilityValueWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
