--- a/plugins/robots/robotsInterpreter/robotSettingsPage.ui
+++ b/plugins/robots/robotsInterpreter/robotSettingsPage.ui
@@ -161,20 +161,30 @@
    <item row="4" column="0" colspan="2">
     <widget class="QGroupBox" name="noiseSensorsGroupBox">
      <property name="title">
-      <string>Noise of sensors</string>
+      <string>Noise</string>
      </property>
      <layout class="QFormLayout" name="formLayout">
+      <property name="fieldGrowthPolicy">
+       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+      </property>
       <property name="margin">
        <number>9</number>
       </property>
       <item row="0" column="0">
-       <widget class="QCheckBox" name="enableNoiseCheckBox">
+       <widget class="QCheckBox" name="enableSensorNoiseCheckBox">
         <property name="text">
-         <string>Enable noise</string>
+         <string>Enable sensor noise</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="4" column="0">
+       <widget class="QLabel" name="approximationLabel">
+        <property name="text">
+         <string>Approximation level</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
        <widget class="QSpinBox" name="approximationLevelSpinBox">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -193,10 +203,10 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="approximationLabel">
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="enableMotorNoiseCheckBox">
         <property name="text">
-         <string>Approximation</string>
+         <string>Enable motor noise</string>
         </property>
        </widget>
       </item>
