--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -13,9 +13,9 @@
   <property name="windowTitle">
    <string>2D Robot Model</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0,0,0,0">
-   <item row="0" column="0">
-    <widget class="QPushButton" name="lineButton">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0,0,0,0,0,0,0,0,0,0">
+   <item row="2" column="0">
+    <widget class="QPushButton" name="clearButton">
      <property name="maximumSize">
       <size>
        <width>75</width>
@@ -23,14 +23,14 @@
       </size>
      </property>
      <property name="toolTip">
-      <string>Line (L)</string>
+      <string>Clear</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="icon">
       <iconset resource="../../robotsInterpreter.qrc">
-       <normaloff>:/icons/2d_ruler.png</normaloff>:/icons/2d_ruler.png</iconset>
+       <normaloff>:/icons/2d_clear.png</normaloff>:/icons/2d_clear.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -38,19 +38,13 @@
        <height>24</height>
       </size>
      </property>
-     <property name="shortcut">
-      <string>L</string>
-     </property>
      <property name="checkable">
-      <bool>true</bool>
-     </property>
-     <property name="flat">
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <widget class="QPushButton" name="wallButton">
+   <item row="1" column="1">
+    <widget class="QPushButton" name="ellipseButton">
      <property name="maximumSize">
       <size>
        <width>75</width>
@@ -58,14 +52,14 @@
       </size>
      </property>
      <property name="toolTip">
-      <string>Wall (W)</string>
+      <string>Ellipse (E)</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="icon">
       <iconset resource="../../robotsInterpreter.qrc">
-       <normaloff>:/icons/2d_wall.png</normaloff>:/icons/2d_wall.png</iconset>
+       <normaloff>:/icons/2d_ellipse.png</normaloff>:/icons/2d_ellipse.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -74,7 +68,7 @@
       </size>
      </property>
      <property name="shortcut">
-      <string>W</string>
+      <string>E</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -113,8 +107,8 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QPushButton" name="ellipseButton">
+   <item row="0" column="1">
+    <widget class="QPushButton" name="wallButton">
      <property name="maximumSize">
       <size>
        <width>75</width>
@@ -122,14 +116,14 @@
       </size>
      </property>
      <property name="toolTip">
-      <string>Ellipse (E)</string>
+      <string>Wall (W)</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="icon">
       <iconset resource="../../robotsInterpreter.qrc">
-       <normaloff>:/icons/2d_ellipse.png</normaloff>:/icons/2d_ellipse.png</iconset>
+       <normaloff>:/icons/2d_wall.png</normaloff>:/icons/2d_wall.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -138,15 +132,15 @@
       </size>
      </property>
      <property name="shortcut">
-      <string>E</string>
+      <string>W</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QPushButton" name="clearButton">
+   <item row="0" column="0">
+    <widget class="QPushButton" name="lineButton">
      <property name="maximumSize">
       <size>
        <width>75</width>
@@ -154,14 +148,14 @@
       </size>
      </property>
      <property name="toolTip">
-      <string>Clear</string>
+      <string>Line (L)</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="icon">
       <iconset resource="../../robotsInterpreter.qrc">
-       <normaloff>:/icons/2d_clear.png</normaloff>:/icons/2d_clear.png</iconset>
+       <normaloff>:/icons/2d_ruler.png</normaloff>:/icons/2d_ruler.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -169,9 +163,85 @@
        <height>24</height>
       </size>
      </property>
+     <property name="shortcut">
+      <string>L</string>
+     </property>
      <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
       <bool>false</bool>
      </property>
+    </widget>
+   </item>
+   <item row="10" column="0" colspan="2">
+    <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Panel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="runButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Run program (Enter)</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../robotsInterpreter.qrc">
+          <normaloff>:/icons/2d_run.png</normaloff>:/icons/2d_run.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>44</width>
+          <height>44</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="stopButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Stop program (Esc)</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../robotsInterpreter.qrc">
+          <normaloff>:/icons/2d_stop.png</normaloff>:/icons/2d_stop.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>44</width>
+          <height>44</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item row="4" column="0" colspan="2">
@@ -299,47 +369,8 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Port 3:</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="port1Box">
-       <item>
-        <property name="text">
-         <string>empty</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>touch</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>color</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>sonar</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>light</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QComboBox" name="port3Box">
-       <property name="currentIndex">
-        <number>0</number>
-       </property>
        <item>
         <property name="text">
          <string>empty</string>
@@ -435,9 +466,48 @@
        </item>
       </widget>
      </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Port 3:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QComboBox" name="port3Box">
+       <property name="currentIndex">
+        <number>0</number>
+       </property>
+       <item>
+        <property name="text">
+         <string>empty</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>touch</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>color</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>sonar</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>light</string>
+        </property>
+       </item>
+      </widget>
+     </item>
     </layout>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <widget class="QPushButton" name="saveWorldModelPushButton">
      <property name="toolTip">
       <string>Save World Model (Ctrl+S)</string>
@@ -460,10 +530,10 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="2" rowspan="12">
+   <item row="0" column="2" rowspan="13">
     <widget class="graphicsUtils::AbstractView" name="graphicsView"/>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <widget class="QPushButton" name="loadWorldModelPushButton">
      <property name="toolTip">
       <string>Load World Model (Ctrl+O)</string>
@@ -486,7 +556,7 @@
      </property>
     </widget>
    </item>
-   <item row="10" column="0">
+   <item row="11" column="0">
     <widget class="QPushButton" name="handCursorButton">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -518,7 +588,7 @@
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
+   <item row="11" column="1">
     <widget class="QPushButton" name="multiselectionCursorButton">
      <property name="toolTip">
       <string>Multiselection mode</string>
@@ -544,7 +614,7 @@
      </property>
     </widget>
    </item>
-   <item row="11" column="0" colspan="2">
+   <item row="12" column="0" colspan="2">
     <widget class="QPushButton" name="autoCenteringButton">
      <property name="toolTip">
       <string>Camera following robot</string>
@@ -570,7 +640,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="0" colspan="2">
+   <item row="8" column="0" colspan="2">
     <widget class="Line" name="line_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -584,77 +654,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="0" colspan="2">
-    <widget class="QFrame" name="frame">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::Panel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QPushButton" name="runButton">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="toolTip">
-         <string>Run program (Enter)</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../robotsInterpreter.qrc">
-          <normaloff>:/icons/2d_run.png</normaloff>:/icons/2d_run.png</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>44</width>
-          <height>44</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="stopButton">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="toolTip">
-         <string>Stop program (Esc)</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="../../robotsInterpreter.qrc">
-          <normaloff>:/icons/2d_stop.png</normaloff>:/icons/2d_stop.png</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>44</width>
-          <height>44</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item row="6" column="0" colspan="2">
+   <item row="7" column="0" colspan="2">
     <widget class="QGroupBox" name="speedBox">
      <property name="title">
       <string>Set speed</string>
@@ -694,6 +694,29 @@ p, li { white-space: pre-wrap; }
           <string>High</string>
          </property>
         </item>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="6" column="0" colspan="2">
+    <widget class="QGroupBox" name="noiseGroupBox">
+     <property name="title">
+      <string>Noise</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QCheckBox" name="enableSensorNoiseCheckBox">
+        <property name="text">
+         <string>Enable sensor noise</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="enableMotorNoiseCheckBox">
+        <property name="text">
+         <string>Enable motor noise</string>
+        </property>
        </widget>
       </item>
      </layout>
