--- a/qrgui/hotKeyManager/hotKeyManagerPage.ui
+++ b/qrgui/hotKeyManager/hotKeyManagerPage.ui
@@ -52,6 +52,9 @@
         <property name="enabled">
          <bool>true</bool>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::ClickFocus</enum>
+        </property>
         <property name="editTriggers">
          <set>QAbstractItemView::NoEditTriggers</set>
         </property>
