--- a/plugins/robots/robotsInterpreter/details/nxtDisplay.ui
+++ b/plugins/robots/robotsInterpreter/details/nxtDisplay.ui
@@ -478,7 +478,16 @@ QPushButton#rightButton:pressed{
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
-     <property name="margin">
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
+      <number>0</number>
+     </property>
+     <property name="bottomMargin">
       <number>0</number>
      </property>
      <item row="1" column="0">
@@ -563,7 +572,7 @@ QPushButton#rightButton:pressed{
       </widget>
      </item>
      <item row="0" column="0" colspan="3">
-      <widget class="QWidget" name="display" native="true">
+      <widget class="graphicsUtils::PaintWidget" name="display" native="true">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -1025,6 +1034,14 @@ QPushButton#rightButton:pressed{
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>graphicsUtils::PaintWidget</class>
+   <extends>QWidget</extends>
+   <header>../../../../qrutils/graphicsUtils/paintWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
